<resources>
    <string name="app_name">My Test</string>
    <string name="fill_the_form">FILL THE FORM</string>
    <string name="full_name">Full Name</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Please Enter Full Name</string>
    <string name="enter_mobile">Please Enter Mobile Number</string>
    <string name="enter_email">Please Enter Email ID</string>
    <string name="enter_message">Please Enter Message</string>
    <string name="success">Success</string>
    <string name="administrator_contact_you_after_submission_of_form">Administrator contact you after sometime.</string>
    <string name="done">DONE</string>
    <string name="form_submitted_sucessfully">FORM SUBMITTED SUCESSFULLY</string>
</resources>
