<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/action_image"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10"
            android:text="@string/administrator_contact_you_after_submission_of_form"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            style="@style/Button"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15"
            android:layout_marginBottom="@dimen/_50"
            android:text="@string/done" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>