<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/joinusbg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/action_image_main"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/joinusbg" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100dp"
                        android:fontFamily="@font/gotham"
                        android:gravity="center_horizontal"
                        android:text="@string/form_submitted_sucessfully"
                        android:textColor="#F63505"
                        android:textSize="20sp" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    style="@style/AppTheme.cards"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_marginTop="-50dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15"
                        android:layout_marginTop="@dimen/_20"
                        android:layout_marginEnd="@dimen/_15"
                        android:layout_marginBottom="@dimen/_20"
                        android:gravity="center"
                        android:background="@null"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_name"
                            style="@style/font_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_email"
                            style="@style/font_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_mobile"
                            style="@style/font_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_message"
                            style="@style/font_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/done"
                            style="@style/Button"
                            android:layout_marginBottom="@dimen/_20"
                            android:text="@string/done"
                            app:backgroundTint="@color/colorAccent" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
